# raidhub-discord

./: .env.example  .gitignore  README.md  pyproject.toml
.github/scripts/: install-cloudflared.sh
.github/workflows/: deploy.yml  pr-ci.yml  staging.yml  start.yml
src/: app_factory.py  cli_sync_commands.py  command_manifest.py  config.py  discord_auth.py  discord_permissions.py  discord_v10_enums.py  interaction_handlers.py  linked_account_context.py  log.py  main.py  prom_metrics.py  raidhub_client.py  raidhub_client_envelope.py  raidhub_client_types.py  raidhub_user_jwt.py  sentry_init.py  structured_logger.py  subscribe_handlers.py  sync_commands.py
src/commands/: __init__.py  instance.py  link.py  player_search.py  player_search_helpers.py  shared.py  subscribe.py  subscribe_resolution.py  subscription.py  subscription_helpers.py  subscription_messages.py  subscription_routes.py  unsubscribe.py
src/manifest/: __init__.py  builders.py  schema.py
src/pagination/: __init__.py  components.py  ids.py  runtime.py  session_pager.py  tokens.py
tests/: test_manage_webhooks_guard.py  test_manifest_commands.py  test_pagination_tokens_and_ids.py  test_raidhub_client_envelope.py  test_shared_time_format.py  test_subscribe_resolution.py  test_subscription_helpers.py  test_sync_commands.py
